--- a/cfgs/gqa/gqa_config.yaml
+++ b/cfgs/gqa/gqa_config.yaml
@@ -57,7 +57,7 @@ NETWORK:
   IMAGE_FROZEN_BACKBONE_STAGES:
   - 1
   - 2
-  IMAGE_FROZEN_BN: true
+  IMAGE_FROZEN_BN: false
   IMAGE_FINAL_DIM: 768
   IMAGE_SEMANTIC: false
   OUTPUT_CONV5: false
