--- a/cfgs/gqa/gqa_config.yaml
+++ b/cfgs/gqa/gqa_config.yaml
@@ -102,7 +102,7 @@ TRAIN:
   AUTO_RESUME: true
   BEGIN_EPOCH: 0
   END_EPOCH: 20
-  OPTIMIZER: 'Adam'
+  OPTIMIZER: 'AdamW'
   CLIP_GRAD_NORM: 10
   GRAD_ACCUMULATE_STEPS: 4
   LR_FACTOR: 0.1
