--- a/cfgs/gqa/gqa_config.yaml
+++ b/cfgs/gqa/gqa_config.yaml
@@ -105,9 +105,9 @@ TRAIN:
   OPTIMIZER: 'AdamW'
   CLIP_GRAD_NORM: 10
   GRAD_ACCUMULATE_STEPS: 1
-  LR_FACTOR: 0.1
-  LR_STEP: "14,18"
+
   LR: 7.0e-6
+  LR_SCHEDULE: 'triangle'
   WD: 0.0001
   WARMUP: true
   WARMUP_METHOD: 'linear'
